--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation "io.jsonwebtoken:jjwt:0.9.1"
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 
 }
 
